# ch32-metapac

./: Cargo.toml
src/chips/: metadata_0000.rs  metadata_0001.rs  metadata_0002.rs  metadata_0003.rs  metadata_0004.rs  metadata_0005.rs  metadata_0006.rs  metadata_0007.rs  metadata_0008.rs  metadata_0009.rs  metadata_0010.rs  metadata_0011.rs  metadata_0012.rs  metadata_0013.rs  metadata_0014.rs  metadata_0015.rs  metadata_0016.rs  metadata_0017.rs  metadata_0018.rs  metadata_0019.rs  metadata_0020.rs  metadata_0021.rs  metadata_0022.rs  metadata_0023.rs  metadata_0024.rs  metadata_0025.rs  metadata_0026.rs  metadata_0027.rs  metadata_0028.rs  metadata_0029.rs  metadata_0030.rs  metadata_0031.rs  metadata_0032.rs  metadata_0033.rs  metadata_0034.rs  metadata_0035.rs  metadata_0036.rs  metadata_0037.rs  metadata_0038.rs  metadata_0039.rs  (+16 more)
src/chips/ch32l103c8t6/: metadata.rs  pac.rs
src/chips/ch32l103f7p6/: metadata.rs  pac.rs
src/chips/ch32l103f8p6/: metadata.rs  pac.rs
src/chips/ch32l103f8u6/: device.x  metadata.rs
src/chips/ch32l103g8r6/: metadata.rs  pac.rs
src/chips/ch32l103k8u6/: metadata.rs  pac.rs
src/chips/ch32v002x4x6/: metadata.rs  pac.rs
src/chips/ch32v003a4m6/: metadata.rs  pac.rs
src/chips/ch32v003f4p6/: metadata.rs
src/chips/ch32v003f4u6/: metadata.rs
src/chips/ch32v003j4m6/: metadata.rs  pac.rs
src/chips/ch32v003x4x6/: device.x  metadata.rs
src/chips/ch32v004x6x1/: metadata.rs  pac.rs
src/chips/ch32v005x6x6/: metadata.rs  pac.rs
src/chips/ch32v006x8x6/: metadata.rs  pac.rs
src/chips/ch32v007x8x6/: metadata.rs
src/chips/ch32v103c6t6/: metadata.rs  pac.rs
src/chips/ch32v103c8t6/: metadata.rs  pac.rs
src/chips/ch32v103c8u6/: metadata.rs  pac.rs
src/chips/ch32v103r8t6/: device.x  metadata.rs
src/chips/ch32v203c6t6/: metadata.rs  pac.rs
src/chips/ch32v203c8t6/: device.x  metadata.rs  pac.rs
src/peripherals/: adc_ch641.rs  adc_l1.rs  adc_v0.rs  adc_v1.rs  adc_v3.rs  adc_x0.rs  afio_ch641.rs  afio_l1.rs  afio_v0.rs  afio_v3.rs  afio_x0.rs  awu_x0.rs  can_l1.rs  can_v3.rs  dac_v3.rs  dma_v1.rs  dvp_v3.rs  extend_ch641.rs  extend_l1.rs  extend_v0.rs  extend_v1.rs  extend_v3.rs  exti_common.rs  flash_l1.rs  flash_v0.rs  flash_v1.rs  flash_v3.rs  flash_x0.rs  gpio_v0.rs  gpio_v3.rs  gpio_x0.rs  i2c_v0.rs  i2c_v3.rs  lptim_l1.rs  opa_l1.rs  opa_x0.rs  otg_v2.rs  pfic_rv2.rs  pfic_rv3.rs  pfic_rv4.rs  (+30 more)
src/registers/: adc_ch641.rs  adc_l1.rs  adc_v0.rs  adc_v1.rs  adc_v3.rs  adc_x0.rs  afio_ch641.rs  afio_l1.rs  afio_v0.rs  afio_v3.rs  afio_x0.rs  awu_x0.rs  can_l1.rs  can_v3.rs  dac_v3.rs  dma_v1.rs  dvp_v3.rs  extend_ch641.rs  extend_l1.rs  extend_v0.rs  extend_v1.rs  extend_v3.rs  exti_common.rs  flash_l1.rs  flash_v0.rs  flash_v1.rs  flash_v3.rs  flash_x0.rs  gpio_v0.rs  gpio_v3.rs  gpio_x0.rs  i2c_v0.rs  i2c_v3.rs  lptim_l1.rs  opa_l1.rs  opa_x0.rs  otg_v2.rs  pfic_rv2.rs  pfic_rv3.rs  pfic_rv4.rs  (+31 more)
(+83 files in other folders)
